--- a/index_list/css/list.css
+++ b/index_list/css/list.css
@@ -298,6 +298,12 @@
     user-select: none;
 }
 
+#page_list .pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
 
 /* RWD start */
 
