--- a/index_list/css/member.css
+++ b/index_list/css/member.css
@@ -1,15 +1,18 @@
-section{
-    position: relative;
-    bottom: 800px;
+section {
+    /* position: relative;
+    bottom: 800px; */
 }
 
 aside {
     background-color: #403C3C;
     width: 230px;
-    height: 90vh;
+    height: 100vh;
+    position: fixed;
+    top: 9%;
+    left: 0;
 }
 
-.panel-default{
+.panel-default {
     /* border: 1px solid red; */
     border-bottom: 1px solid white;
     padding: 5px;
@@ -32,56 +35,60 @@ aside {
     background-color: #8B1309;
 }
 
-.container{
+.container {
     display: flex;
-    justify-content: center; 
-    align-items: center; 
+    justify-content: center;
+    align-items: center;
     /* position: relative; */
 }
 
-.member_info{
+.member_info {
     margin-top: 60px;
 }
 
-.member_contain{
+.member_contain {
     padding-top: 20px;
 }
 
-.member_edit_btn{
+.member_edit_btn {
     margin-left: 200px;
     border-radius: 5px;
     margin-top: 30px;
 }
 
-.title_member_edit{
+.title_member_edit {
     font-size: 35px;
     font-weight: bold;
     text-align: center;
 }
 
-.edit_info{
+.edit_info {
+    /* position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 30%); */
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    height: 80vh;
+}
+
+#edit_member .edit_info {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,30%);
+    transform: translate(-50%, 30%);
 }
 
-#edit_member .edit_info{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,30%);
-}
-
-label{
+label {
     margin-right: 20px;
 }
 
-#edit_member .form-control{
+#edit_member .form-control {
     width: 300px;
 }
 
-.was-validated .member_confirm_btn{
+.was-validated .member_confirm_btn {
     margin-left: 30px;
     border-radius: 5px;
     margin-top: 30px;
@@ -90,81 +97,87 @@ label{
     color: #fff;
     font-size: 18px;
     border: none;
-    background-color: #8b1309; 
+    background-color: #8b1309;
     transition: 0.3s;
 }
 
-.was-validated .member_confirm_btn:hover{
+.was-validated .member_confirm_btn:hover {
     background-color: #a30f01;
 }
 
-.container .order_table{
+.container {
+    height: 90vh;
+}
+
+.container .order_table {
     position: absolute;
-    top: 0px;
+    top: 120px;
     left: 16%;
     width: 80%;
 }
 
-.table th,td{
+.table th,
+td {
     text-align: center;
     width: 200px;
 }
 
-.cancel_btn,.detail_btn,.comment_btn{
+.cancel_btn,
+.detail_btn,
+.comment_btn {
     border-radius: 8px;
 }
 
-.comment_btn{
+.comment_btn {
     margin-left: -80px;
 }
 
-
-.cancel_modal_body{
+.cancel_modal_body {
     margin-top: 50px;
     margin-bottom: 50px;
     text-align: center;
     font-size: 28px;
 }
 
-.modal-title{
+.modal-title {
     font-size: 24px;
 }
 
-.detail_modal_body{
+.detail_modal_body {
     margin-top: 50px;
     margin-bottom: 50px;
     margin-left: 150px;
     font-size: 18px;
 }
 
-.rank_modal_body{
+.rank_modal_body {
     position: relative;
     margin-top: 100px;
     margin-bottom: 200px;
     margin-left: 150px;
 }
 
-.rank_modal_title{
+.rank_modal_title {
     position: absolute;
     font-size: 28px;
     left: -50px;
     top: -40px;
 }
 
-.rank_modal_comment{
+.rank_modal_comment {
     position: absolute;
     left: -35px;
-    top: 90px;  
+    top: 90px;
     border-radius: 8px;
     height: 100px;
 }
 
-.rank_modal_star{
+.rank_modal_star {
     margin-top: 20px;
     padding-top: 20px;
 }
 
-.star{
+.star {
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -174,11 +187,7 @@ label{
     cursor: pointer;
 }
 
-.stars{
+.stars {
     color: orange;
     margin-left: 10px;
 }
-
-
-
-
