--- a/index_list/css/member_register.css
+++ b/index_list/css/member_register.css
@@ -2,22 +2,18 @@
     /* border: 1px solid black; */
     margin-top: 10px;
     padding: 50px;
+    height: 86vh;
 } 
 
 .register_title {
     display: flex;
     justify-content: center; 
-    align-items: center;
     margin-bottom: 40px;
-}
-
-.member_icon {
-    width: 40px;
 }
 
 .register_title_text {
     font-size: 30px;
-    font-weight: 600;
+    font-weight: 600px;
 }
 
 .register_form {
@@ -41,12 +37,24 @@
     right: 69px;
 }
 
+.btn_div{
+    display: flex;
+    justify-content: center;
+}
+
 .register_btn {
     color: white;
     background-color: #8B1309;
+    border: none;
+    border-radius: 5px;
     padding: 10px;
-    width: 100%;
+    width: 150px;
     margin-top: 50px;
+    transition: 0.3s;
+}
+
+.register_btn:hover{
+    background-color: #a30f01;
 }
 
 
