--- a/index_list/css/restaurant_login.css
+++ b/index_list/css/restaurant_login.css
@@ -3,9 +3,14 @@
     padding-top: 50px;
     margin-top: 50px;
     width: 60%;
+    height: 81vh;
 }
 
 .card-head {
+    text-align: center;
+}
+
+.card-body{
     text-align: center;
 }
 
@@ -25,21 +30,26 @@
     justify-content: center; 
     align-items: center; 
     padding: 0 20px 0 120px;
-
 }
 
 .remember_psw a {
-    text-decoration: none;
     color: black;
-    margin-right: -50px;
+    margin-right: -100px;
 }
 
 .login_btn_2 {
     color: white;
-    background-color: #403C3C;
+    background-color: #8b1309;
     font-size: 20px;
+    width: 150px;
+    border: none;
+    border-radius: 5px;
     padding: 10px 0 10px 0;
-    width: 100%;
+    transition: 0.3s;
+}
+
+.login_btn_2:hover{
+    background-color: #a30f01;
 }
 
 /* RWD */
