--- a/index_list/css/index.css
+++ b/index_list/css/index.css
@@ -18,6 +18,11 @@
     text-align: center;
 }
 
+.search_mobile_div,
+.mobile_div {
+    display: none;
+}
+
 
 /* 搜尋關鍵字 start */
 
@@ -415,22 +420,87 @@
     #search_box {
         height: 70vh;
     }
+    .search_div {
+        display: none;
+    }
+    .search_mobile_div {
+        all: unset;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    .search_mobile_inline_div {
+        background-color: #fff;
+        width: 75%;
+        height: 40px;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    .search_icon {
+        margin-left: 20px;
+        font-size: 30px;
+    }
+    .search_label {
+        margin-left: 20px;
+        font-size: 20px;
+        line-height: 40px;
+    }
+    .mobile_div {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        z-index: 999;
+        background-color: #fff;
+    }
+    .turn_off {
+        background-color: rgb(236, 236, 236);
+        font-size: 4vw;
+    }
+    .mobile_inline_div {
+        padding: 20px 50px 50px 50px;
+        background-color: rgb(236, 236, 236);
+    }
     .search_keyword {
-        width: 450px;
+        width: 100%;
     }
     .area_label {
-        width: 450px;
+        width: 100%;
         margin-bottom: 20px;
     }
-    .tab_div {
-        position: absolute;
-        top: 100px;
-        left: 45px;
-        width: 450px;
+    .area_label .fa-sort-down {
+        display: none;
+    }
+    .mobile_tab_div {
+        margin-left: 50px;
+        margin-top: 20px;
+        display: none;
+    }
+    .mobile_tab_css label {
+        font-size: 2.6vw;
+        width: 90%;
+        border-bottom: 1.5px solid #d1d1d1;
+        display: block;
+    }
+    .mobile_tab_content {
+        display: none;
+    }
+    .mobile_tab_content span {
+        display: block;
+        border-bottom: 1px solid rgb(224, 224, 224);
+        font-size: 2.3vw;
+        margin-bottom: 10px;
     }
     .other_label {
-        width: 450px;
+        width: 49%;
+        margin-right: 2%;
         margin-bottom: 20px;
+        float: left;
+        z-index: 1000;
+    }
+    .other_label .fa-sort-down {
+        margin-left: 60%;
     }
     .chk_div {
         position: absolute;
@@ -440,7 +510,7 @@
     }
     .search_btn {
         margin-top: 0px;
-        width: 450px;
+        width: 49%;
     }
     .kind_span {
         width: 100%;
