--- a/index_list/css/member.css
+++ b/index_list/css/member.css
@@ -12,6 +12,10 @@ aside {
     left: 0;
 }
 
+.default {
+    background-color: #8b1309;
+}
+
 .panel-default {
     /* border: 1px solid red; */
     border-bottom: 1px solid white;
@@ -88,8 +92,13 @@ label {
     width: 300px;
 }
 
+.btn_div {
+    display: flex;
+    justify-content: center;
+}
+
 .member_confirm_btn {
-    margin-left: 30px;
+    /* margin-left: 30px; */
     border-radius: 5px;
     margin-top: 30px;
     width: 150px;
@@ -101,7 +110,7 @@ label {
     transition: 0.3s;
 }
 
-.was-validated .member_confirm_btn:hover {
+.member_confirm_btn:hover {
     background-color: #a30f01;
 }
 
@@ -118,7 +127,7 @@ label {
     transition: 0.3s;
 }
 
-.member_back_btn:hover{
+.member_back_btn:hover {
     background-color: #4b4747;
 }
 
