--- a/index_list/css/list.css
+++ b/index_list/css/list.css
@@ -1,13 +1,14 @@
-.container_list {
-    margin-left: 100px;
-}
-
 .search_div {
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    /* justify-content: center; */
     margin-top: 20px;
 }
 
+.search_mobile_div,
+.mobile_div {
+    display: none;
+}
 
 /* 搜尋關鍵字 start */
 
@@ -286,7 +287,7 @@
 }
 
 .rest_img {
-    width: 46%;
+    width: 40%;
     margin-right: 5px;
 }
 
@@ -297,10 +298,10 @@
     border-radius: 10px;
 }
 
-#search_aside {
+/* #search_aside {
     background-color: #999999;
     width: 12%;
-    height: 1000vh;
+    height: 100%;
     position: fixed;
     top: 5%;
     left: 0;
@@ -318,13 +319,12 @@
     user-select: none;
     font-size: 18px;
     margin-left: 28px;
-}
+} */
 
 #page_list .pagination {
     display: flex;
     justify-content: center;
     margin-top: 50px;
-    margin-left: 200px;
 }
 
 
@@ -345,9 +345,9 @@
     }
     .tab_div {
         position: absolute;
-        top: 60px;
-        left: 265px;
-        width: 500px;
+        top: 7.4%;
+        left: 27.5%;
+        width: 44%;
     }
     .other_label {
         width: 250px;
@@ -357,9 +357,21 @@
     }
     .chk_div {
         position: absolute;
-        top: 60px;
-        left: 265px;
-        width: 500px;
+        top: 7.4%;
+        left: 35.8%;
+        width: 44%;
+    }
+    .chk_css {
+        padding: 20px 15px 0 15px;
+    }
+    .chk_css label{
+        margin-right: 13px;
+    }
+    .chk_item {
+        display: inline-block;
+        font-size: 2vw;
+        margin-left: 6px;
+        margin-bottom: 15px;
     }
     .search_btn {
         width: 100px;
@@ -380,48 +392,48 @@
         height: 60vh;
     }
     .search_keyword {
-        width: 450px;
+        width: 200px;
     }
     .area_label {
-        width: 450px;
+        width: 200px;
     }
     .area_label .fa-sort-down {
-        margin-left: 68%;
+        margin-left: 30%;
     }
     .tab_div {
         position: absolute;
-        top: 100px;
-        left: 135px;
-        width: 450px;
+        top: 4%;
+        left: 28.4%;
+        width: 56%;
     }
     .other_label {
-        width: 450px;
+        width: 200px;
     }
     .other_label .fa-sort-down {
-        margin-left: 71.5%;
+        margin-left: 40%;
     }
     .chk_div {
         position: absolute;
-        top: 180px;
-        left: 135px;
-        width: 450px;
+        top: 4%;
+        left: 28.2%;
+        width: 56%;
+    }
+    .chk_css {
+        padding: 15px 0 0 5px;
     }
     .search_btn {
-        width: 450px;
+        width: 100px;
     }
-    .kind_span {
+    .rest_div {
         width: 100%;
-        height: 40%;
-        margin-bottom: 5%;
     }
-    .kind_span span {
-        position: absolute;
-        left: 22.5%;
-        top: 40%;
-        font-size: 72px;
+    .rest_list {
+        width: 100%;
+    }
+    .rest_img {
+        width: 30%;
     }
 }
-
 
 /* 平板 */
 
@@ -429,43 +441,108 @@
     #search_box {
         height: 70vh;
     }
+    .search_div {
+        display: none;
+    }
+    .search_mobile_div {
+        all: unset;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    .search_mobile_inline_div {
+        background-color: #fff;
+        width: 75%;
+        height: 40px;
+        margin-top: 20px;
+        border: 1px solid #999999;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    .search_icon {
+        margin-left: 20px;
+        font-size: 25px;
+    }
+    .search_label {
+        margin-left: 20px;
+        font-size: 20px;
+        line-height: 40px;
+    }
+    .mobile_div {
+        font-size: 3vw;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        z-index: 999;
+        background-color: #fff;
+    }
+    .turn_off {
+        background-color: rgb(236, 236, 236);
+        font-size: 4vw;
+    }
+    .mobile_inline_div {
+        padding: 20px 50px 50px 50px;
+        background-color: rgb(236, 236, 236);
+    }
     .search_keyword {
-        width: 450px;
+        width: 100%;
     }
     .area_label {
-        width: 450px;
+        width: 100%;
+        border-radius: 5px;
         margin-bottom: 20px;
     }
-    .tab_div {
-        position: absolute;
-        top: 100px;
-        left: 45px;
-        width: 450px;
+    .area_label .fa-sort-down {
+        display: none;
+    }
+    .mobile_tab_div {
+        width: 100%;
+        margin-left: 10%;
+        margin-top: 30px;
+        display: none;
+    }
+    .mobile_tab_css label {
+        font-size: 2.6vw;
+        width: 80%;
+        border-bottom: 1.5px solid #d1d1d1;
+        display: block;
+    }
+    .mobile_tab_content {
+        display: none;
+    }
+    .mobile_tab_content span {
+        display: block;
+        width: 80%;
+        border-bottom: 1px solid rgb(224, 224, 224);
+        font-size: 2.3vw;
+        margin-bottom: 10px;
     }
     .other_label {
-        width: 450px;
+        width: 49%;
+        border-radius: 5px;
+        margin-right: 2%;
         margin-bottom: 20px;
+        float: left;
+        z-index: 1000;
     }
-    .chk_div {
-        position: absolute;
-        top: 160px;
-        left: 45px;
-        width: 450px;
+    .other_label .fa-sort-down {
+        display: none;
+    }
+    .mobile_chk_css {
+        width: 40%;
+        float: left;
+        margin: 10px;
+    }
+    .mobile_chk_item {
+        font-size: 2.5vw;
+        margin-right: 50px;
     }
     .search_btn {
         margin-top: 0px;
-        width: 450px;
-    }
-    .kind_span {
-        width: 100%;
-        height: 45%;
-        margin-bottom: 5%;
-    }
-    .kind_span span {
-        position: absolute;
-        left: 22.5%;
-        top: 40%;
-        font-size: 54px;
+        border-radius: 5px;
+        width: 49%;
     }
 }
 
@@ -477,10 +554,10 @@
         height: 60vh;
     }
     .search_keyword {
-        width: 400px;
+        /* width: 400px; */
     }
     .area_label {
-        width: 400px;
+        /* width: 400px; */
         margin-bottom: 20px;
     }
     .area_label .fa-sort-down {
@@ -497,7 +574,7 @@
         margin-left: 30px;
     }
     .other_label {
-        width: 400px;
+        /* width: 400px; */
         margin-bottom: 20px;
     }
     .other_label .fa-sort-down {
@@ -510,7 +587,7 @@
         width: 400px;
     }
     .search_btn {
-        width: 400px;
+        /* width: 400px; */
     }
 }
 
@@ -519,10 +596,10 @@
 
 @media screen and (max-width:480px) {
     .search_keyword {
-        width: 350px;
+        /* width: 350px; */
     }
     .area_label {
-        width: 350px;
+        /* width: 350px; */
         margin-bottom: 20px;
     }
     .area_label .fa-sort-down {
@@ -535,7 +612,7 @@
         width: 350px;
     }
     .other_label {
-        width: 350px;
+        /* width: 350px; */
         margin-bottom: 20px;
     }
     .other_label .fa-sort-down {
@@ -548,7 +625,7 @@
         width: 350px;
     }
     .search_btn {
-        width: 350px;
+        /* width: 350px; */
     }
 }
 
