--- a/index_list/css/member.css
+++ b/index_list/css/member.css
@@ -3,13 +3,18 @@
     bottom: 800px;
 } */
 
-aside {
+.aside_menu {
     background-color: #403C3C;
     width: 230px;
-    height: 100vh;
-    position: fixed;
-    top: 9%;
-    left: 0;
+    height: 94vh;
+    /* position: sticky;
+    top: 12%;
+    left: 0; */
+    float: left;
+}
+
+.mobile_aside_menu{
+    display: none;
 }
 
 .default {
@@ -39,13 +44,6 @@ aside {
     background-color: #8B1309;
 }
 
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* position: relative; */
-}
-
 .member_info {
     margin-top: 60px;
 }
@@ -63,7 +61,7 @@ aside {
 .title_member_edit {
     font-size: 35px;
     font-weight: bold;
-    text-align: center;
+    margin-left: 35px;
 }
 
 .edit_info {
@@ -73,8 +71,19 @@ aside {
     transform: translate(-50%, 30%); */
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin-top: 100px;
-    height: 80vh;
+    height: 74vh;
+}
+
+.edit_info input[type=text],
+.edit_info input[type=email],
+.edit_info input[type=password]{
+    width: 300px;
+}
+
+.form_radio{
+    margin-right: 195px;
 }
 
 #edit_member .edit_info {
@@ -93,8 +102,7 @@ label {
 }
 
 .btn_div {
-    display: flex;
-    justify-content: center;
+    margin-left: 50px;
 }
 
 .member_confirm_btn {
@@ -217,3 +225,72 @@ td {
     color: orange;
     margin-left: 10px;
 }
+
+/* RWD start */
+
+
+/* 超大型螢幕 */
+
+@media screen and (max-width:1200px) {
+
+}
+
+
+/* 大型螢幕 */
+
+@media screen and (max-width:992px) {
+
+}
+
+
+/* 平板 */
+
+@media screen and (max-width:768px) {
+    .aside_menu{
+        display: none;
+    }
+    /* #aside_menu_chk{
+        opacity: 0;
+        z-index: -1;
+    } */
+    #aside_menu_chk:checked + .mobile_aside_menu{
+        transform: translateX(0);
+    }
+    #aside_menu_chk:checked + .mobile_aside_menu .fa-angle-right{
+        transform: scaleX(-1);
+    }
+    .mobile_aside_menu {
+        display: unset;
+        background-color: #403C3C;
+        width: 230px;
+        height: 94vh;
+        float: left;
+        position: relative;
+        transform: translateX(-99%);
+        transition: 0.6s;
+    }
+    .mobile_aside_menu label{
+        position: absolute;
+        background-color: #ccc;
+        border-radius: 0 5px 5px 0;
+        padding: 20px 10px;
+        top: 50%;
+        left: 100%;
+        transition: 0.6s;
+    }
+}
+
+
+/* 手機 */
+
+@media screen and (max-width:576px) {
+
+}
+
+
+/* 小手機 */
+
+@media screen and (max-width:480px) {}
+
+
+/* RWD end */
