--- a/index_list/css/order.css
+++ b/index_list/css/order.css
@@ -1,40 +1,72 @@
 
 /* 分類列表 */
 .menu_group{
-    margin: 2vh 0 2vh 0;
-    height: 50px;
+    margin: 0 0 1vw 0;
+    height: 75px;
+    width: 100%;
     background-color: #403C3C;
 }
 
 #menu_group{
     padding-top: 10px;
-    margin-left: 10vh;
+    margin-left: 10vw;
 }
 
 .menu_group_list{
-    margin: 0 1vh 0 1vh;
-
+    margin: 0 1.5vw 0 vw;
+    height: 40px;
+    width: 9vw;
+    font-size: 12pt;
+    border: 1px solid #FCC106;
+    color: #403C3C;
+    transition: 0.3s;
 }
+.menu_group_list:hover{
+    background-color: #8B1309;
+    color: white;
+}
+
 /* 按鈕圓角 */
 .oval{
     border-radius: 100px;
 }
 
+
+/* #group_1{
+    margin-top: 5%;
+} */
+
+
 .food_title{
-margin-left: 10vh;
+margin-left: 10vw;
 }
 
 
 div.food_list_border{
     width: 35%;
 	float: left;
-    margin: 0 0.5vh 2vh 10vh;
-    border: 1px black solid;
+    margin: 0 0.5vw 1vw 10vw;
+    border: 1px #343A3F solid;
     border-radius: 10px;
 }
 div.food_list_border2{
-    margin-left: 1vh;
+    margin-left: 0vw;
 }
+
+.btn_count{
+    margin: 2% 1vw 0 1vw ;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    border:1px solid #403C3C;
+    border-radius: 100%;
+    transition: 0.3s;
+}
+.btn_count:hover{
+    background-color: #8B1309;
+    color: white;
+}
+
 
 .food_list_detail{
     align-items: flex-start
@@ -52,7 +84,7 @@ div.food_order_group{
 }
 
 .food_name{
-    font-size: 20px;
+    font-size: 16pt;
 }
 .food_detail{
     flex-wrap: nowrap;
@@ -62,10 +94,7 @@ div.food_order_group{
 
 .dollar{
     margin-right: 2%;
-    font-size: 20px;
-}
-.order_number{
-    margin-right: 2%;
+    font-size: 14pt;
 }
 
 .food_img{
@@ -88,30 +117,96 @@ ul.food_list_dollar li{
 #checkout{
     width: 100%;
 }
+.order_number_sm{
+    display: none;
+}
+
+.btn_cart{
+    transition: 0.3s;
+}
+
+.btn_cart:hover{
+    background-color: brown;
+}
 
 .add_cart{
     margin-right: 1vh;
+    display: none;
+
 }
 
+.add_cart_sm{
+    display: block;
+    margin: 0 0.5vw 0.5vw 0.5vw;
+}
+
+/* 大平板 */
+@media screen and (max-width:995px) {
+    .menu_group_list{
+        width: 13vw;
+    }
+    
+    
+    #group_1{
+        margin-top: 3%;
+    }
+    
+
+    .order_number{
+        display: none;
+    }
+    .order_number_sm{
+        display: block;
+        margin: 2vw 3vw 0 3vw;
+    }
+
+}
 
 
 /* 平板 */
 
 @media screen and (max-width:768px) {
+        .menu_group_list{
+            width: 15vw;
+            font-size: 11pt;
+        }
+    
+    .menu_group{
+        overflow: hidden;
+    }
+    #group_1{
+        margin-top: 6%;
+    }
 
     div.food_list_border{
-        width: 70%;    
+        width: 70%;  
+        margin-right: 0;
     }
     .group_button{
         display: none;
     }
     div.food_list_border2{
         margin-right: 0;
-        margin-left: 10vh;
+        margin-left: 10vw;
     }
     div.food_order_group{
         float: right;
     }
+
+    .order_number{
+        display: block;
+    }
+    .order_number_sm{
+        display: none;
+    }
+    .add_cart{
+        display: none;
+    }
+
+    .add_cart_sm{
+        display: block;
+    }
+
 
 }
 
@@ -119,6 +214,14 @@ ul.food_list_dollar li{
 /* 手機 */
 
 @media screen and (max-width:576px) {
+    .menu_group_list{
+        width: 20vw;
+        font-size: 11pt;
+    }
+
+    #group_1{
+        margin-top: 7%;
+    }
 
     div.food_list_border{
         width: 70%;  
@@ -127,18 +230,25 @@ ul.food_list_dollar li{
     div.food_list_border2{
         margin-left:10vh;
     }
-
-
     div.food_order_group{
         float: right;
         margin-left: 3vh;
     }
 
     div.food_list_border2{
-        margin-left: 10vh;
+        margin-left: 10vw;
     }
-    .group_button{
+    div.group_button{
         display: none;
+    }
+    .dollar{
+        font-size: 14pt;
+    }
+    .add_cart{
+        display: none;
+    }
+    .add_cart_sm{
+        display: block;
     }
 
 }
