--- a/index_list/css/login.css
+++ b/index_list/css/login.css
@@ -1,17 +1,11 @@
 section{
-    height: 87vh;
+    height: 80vh;
 }
 
-.container{
-    position: relative;
-}
-
-.home_login{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,60%);
-    
+.login_div{
+    margin-top: 10%;
+    display: flex;
+    justify-content: center;
 }
 
 .title_home_login{
@@ -20,38 +14,118 @@ section{
     text-align: center;
 }
 
-.account_home_login input{
-    border-radius: 5px; 
-    width: 200px;
-    border-color: whitesmoke;
-}
-
 .btn_home_forgetpwd{
-    font-size: 10px;
+    font-size: 14px;
     margin-top: 10px;
     float: left;
 }
 
 .btn_home_rememberme{
     float: left;
-    font-size: 10px;
+    font-size: 14px;
     margin-top: 12px;
     margin-left: 150px;
 }
 
 .login_btn{
     width: 200px;
-    height: 50px;
-    margin-top: 40px;
+    height: 40px;
     margin-left: 40px;
     font-size: 24px;
     background-color: #8B1309;
     color: #fff;
-    border: whitesmoke 1px solid;
-    border-radius: 10px;
+    border: none;
+    border-radius: 5px;
     transition: 0.3s;
 }
 
 .login_btn:hover{
     background-color: #a30f01;
 }
+
+.member_login_div{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1%;
+}
+
+.member_login_btn{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.btn_login,.btn_register{
+    border: none;
+    border-radius: 5px;
+    padding: 5px 15px;
+    font-size: 18px;
+    width: 45%;
+}
+
+.btn_login{
+    background-color: #8b1309;
+    color: #fff;
+}
+
+.btn_login:hover{
+    background-color: #a30f01;
+}
+
+.btn_register{
+    background-color: #403C3C;
+    color: #fff;
+}
+
+.btn_register:hover{
+    background-color: #524d4d;
+}
+
+/* RWD start */
+
+
+/* 超大型螢幕 */
+
+@media screen and (max-width:1200px) {
+
+}
+
+
+/* 大型螢幕 */
+
+@media screen and (max-width:992px) {
+}
+
+
+/* 平板 */
+
+@media screen and (max-width:768px) {
+
+}
+
+
+/* 手機 */
+
+@media screen and (max-width:576px) {
+    .login_btn{
+       width: 100%;
+       margin-left: 0;
+   }
+    .member_login_btn{
+        flex-wrap: wrap;
+    }
+    .btn_login,.btn_register{
+        width: 100%;
+        margin-top: 5%;
+    }
+}
+
+
+/* 小手機 */
+
+@media screen and (max-width:480px) {
+   
+}
+
+
+/* RWD end */
