--- a/index_list/css/member.css
+++ b/index_list/css/member.css
@@ -10,6 +10,7 @@
     height: 100%;
     position: fixed;
     float: left;
+    z-index: 4;
 }
 
 .mobile_aside_menu{
@@ -95,13 +96,6 @@
     width: 300px;
 }
 
-#edit_member .edit_info {
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 30%); */
-}
-
 label {
     margin-right: 20px;
 }
@@ -110,12 +104,15 @@ label {
     width: 300px;
 }
 
+#edit_member .edit_chk-paswrd{
+    width: 285px;
+}
+
 .btn_div {
     margin-left: 50px;
 }
 
 .member_confirm_btn {
-    /* margin-left: 30px; */
     border-radius: 5px;
     margin-top: 30px;
     width: 150px;
@@ -150,6 +147,7 @@ label {
 
 .container-fluid {
     width: 100%;
+    height: 85vh;
 }
 
 /* booking_manage start */
@@ -200,7 +198,7 @@ td {
     color: #fff;
 }
 
-.detail_btn{
+.detail_btn:hover{
     background-color: #524d4d;
 }
 
@@ -228,9 +226,6 @@ td {
     height: 100%;
     margin-left: 20%;
 }
-
-
-
 
 .cancel_modal_body {
     margin-top: 50px;
@@ -438,12 +433,18 @@ td {
     td {
         width: 15%;
     }
+    .edit_form_label{
+        margin-right: 7%;
+    }
 }
 
 
 /* 小手機 */
 
 @media screen and (max-width:480px) {
+    .container-fluid {
+        height: auto;
+    }
     .table th,td {
         width: 3%;
     }
@@ -471,13 +472,35 @@ td {
     .cancel_btn,.detail_btn,.comment_btn{
         width: 33%;
     }
-    .form_radio .form_label{
+    .form_radio .member_form_label{
         width: 100%;
         display: block;
     }
     .form_radio .form-check-label{
         width: 20%;
         margin-left: 10%;
+    }
+    #edit_member{
+        margin-left: 20%;
+    }
+    #edit_member .edit_chk-paswrd{
+        width: 300px;
+    }
+    .edit_label{
+        width: 80%;
+    }
+    .edit_text{
+        width: 80%;
+    }
+    .edit_btn_div{
+        margin-bottom: 10%;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        margin-right: 15%;
+    }
+    .member_back_btn{
+        margin-right: 11%;
     }
 }
 
