--- a/index_list/css/orderpage.css
+++ b/index_list/css/orderpage.css
@@ -10,10 +10,13 @@
 #menu_group{
     padding-top: 10px;
     margin-left: 10vw;
+    margin-right: 3vw;
 }
 
 .menu_group_list{
-    margin: 0 1.5vw 0 vw;
+    margin-top: 8px;
+    margin-bottom: 10px;
+    margin: 8px 0 10px 0;
     height: 40px;
     width: 9vw;
     font-size: 12pt;
@@ -26,22 +29,21 @@
     color: white;
 }
 
+#group_1{
+    margin-top: 15px;
+}
+
 /* 按鈕圓角 */
 .oval{
     border-radius: 100px;
 }
 
-
-/* #group_1{
-    margin-top: 5%;
-} */
-
-
+/* 分類標題 */
 .food_title{
 margin-left: 10vw;
 }
 
-
+/* 商品框*/
 div.food_list_border{
     width: 35%;
 	float: left;
@@ -49,10 +51,49 @@ div.food_list_border{
     border: 1px #343A3F solid;
     border-radius: 10px;
 }
+/* 右側商品框*/
 div.food_list_border2{
     margin-left: 0vw;
 }
 
+.food_name{
+    font-size: 16pt;
+}
+.food_detail{
+    flex-wrap: nowrap;
+    list-style-type: none; 
+    margin-left: 20%;
+}
+
+.dollar{
+    margin-right: 5%;
+    font-size: 12pt;
+}
+
+.food_img{
+    width: 150px;
+    height: auto;
+    float: left;
+    margin: 5px 20px 5px 5px;
+}
+
+/* 加入購物車按鈕 */
+.btn_add_cart{
+    font-size: 10pt;
+    border-radius: 0 0 9px 9px;
+    width: 100%;
+    background-color: #403C3C;
+    color: white;
+    transition: 0.3s;
+}
+
+.btn_add_cart:hover{
+    background-color: brown;
+}
+
+
+
+/* 商品數量 */
 .btn_count{
     margin: 2% 1vw 0 1vw ;
     width: 30px;
@@ -72,92 +113,71 @@ div.food_list_border2{
     align-items: flex-start
 }
 
-div.food_order_group{
+
+
+/* 揪團與結帳 */
+.food_order_group{
     width: 10%;
 	float: left;
     margin-right: 8%;
+    position: fixed;
     display: flex; 
     justify-content:center;
-    position: fixed;
     top: 35%;
-    left: 82%;
-}
-
-.food_name{
-    font-size: 16pt;
-}
-.food_detail{
-    flex-wrap: nowrap;
-    list-style-type: none; 
-    margin-left: 20%;
-}
-
-.dollar{
-    margin-right: 2%;
-    font-size: 14pt;
-}
-
-.food_img{
-    width: 150px;
-    height: auto;
-    float: left;
-    margin: 5px 5px 5px 5px;
-
-}
-
-.food_list_dollar{
-    list-style-type: none; 
-    display: flex;
-}
-
-ul.food_list_dollar li{
-    margin-left: 5px;
-}
-
-#checkout{
-    width: 100%;
-}
-.order_number_sm{
-    display: none;
-}
-
-.btn_cart{
+    left: 85%;
     transition: 0.3s;
 }
 
-.btn_cart:hover{
-    background-color: brown;
+.group_button{
+    background-color: #403C3C;
+    color: white;
+    height: 40px;
+    width: 100px;
+    font-size: 1vw;
+    border: 0;
 }
 
-.add_cart{
-    margin-right: 1vh;
-    display: none;
+.group_button:hover{
+    background-color: #FCC106;
+    color: black;
 
 }
 
-.add_cart_sm{
-    display: block;
-    margin: 0 0.5vw 0.5vw 0.5vw;
+
+
+/* 結帳 */
+#checkout{
+    width: 100vw;
+    height: 50px;
+    margin-top: 10px;
+    background-color: #8B1309;
+    border: 0;
+    color: white;
+    font-size: 1vw;
+    font-weight: bold;
+    border-radius: 10px;
+    transition: 0.3s;
+
 }
+
+#checkout:hover{
+    background-color: #FCC106;
+    color: black;
+    
+}
+
+
+
+
 
 /* 大平板 */
 @media screen and (max-width:995px) {
     .menu_group_list{
         width: 13vw;
-    }
-    
-    
-    #group_1{
-        margin-top: 3%;
-    }
-    
+    }    
 
     .order_number{
         display: none;
-    }
-    .order_number_sm{
-        display: block;
-        margin: 2vw 3vw 0 3vw;
     }
 
 }
@@ -174,16 +194,12 @@ ul.food_list_dollar li{
     .menu_group{
         overflow: hidden;
     }
-    #group_1{
-        margin-top: 6%;
-    }
 
     div.food_list_border{
         width: 70%;  
         margin-right: 0;
     }
     .group_button{
-        display: none;
     }
     div.food_list_border2{
         margin-right: 0;
@@ -196,17 +212,6 @@ ul.food_list_dollar li{
     .order_number{
         display: block;
     }
-    .order_number_sm{
-        display: none;
-    }
-    .add_cart{
-        display: none;
-    }
-
-    .add_cart_sm{
-        display: block;
-    }
-
 
 }
 
@@ -217,10 +222,6 @@ ul.food_list_dollar li{
     .menu_group_list{
         width: 20vw;
         font-size: 11pt;
-    }
-
-    #group_1{
-        margin-top: 7%;
     }
 
     div.food_list_border{
@@ -238,17 +239,10 @@ ul.food_list_dollar li{
     div.food_list_border2{
         margin-left: 10vw;
     }
-    div.group_button{
-        display: none;
+    .group_button{
+
     }
     .dollar{
         font-size: 14pt;
     }
-    .add_cart{
-        display: none;
-    }
-    .add_cart_sm{
-        display: block;
-    }
-
 }
