--- a/index_list/css/member.css
+++ b/index_list/css/member.css
@@ -145,9 +145,13 @@ label {
     background-color: #4b4747;
 }
 
-.container-fluid {
+.default_container {
     width: 100%;
     height: 85vh;
+}
+
+.table_container{
+    width: 100%;
 }
 
 /* booking_manage start */
@@ -442,7 +446,7 @@ td {
 /* 小手機 */
 
 @media screen and (max-width:480px) {
-    .container-fluid {
+    .default_container {
         height: auto;
     }
     .table th,td {
