--- a/index_list/css/restaurant_history_list.css
+++ b/index_list/css/restaurant_history_list.css
@@ -55,6 +55,13 @@ aside {
     height: 83vh;    
 }
 
+.container .order_table {
+    position: absolute;
+    top: 100px;
+    left: 16%;
+    width: 80%;
+}
+
 .member_info{
     
     margin-top: 60px;
